// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsDetailsPanel Renders renders 1`] = `
<GroupsDetailsPanel
  defaultFilters={
    Object {
      "outboundIdentifierLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "reasonLists": Array [
        Object {
          "id": "active",
          "value": "enabled",
        },
      ],
      "users": Array [
        Object {
          "id": "status",
          "value": "accepted",
        },
        Object {
          "id": "invitationStatus",
          "value": "enabled",
        },
      ],
    }
  }
  inherited={false}
  item={
    Object {
      "active": true,
      "description": "mockDescription",
      "id": "mockId",
      "name": "mockName",
      "users": Array [
        Object {
          "id": "mockSubEntityId",
        },
      ],
    }
  }
  outboundIdentifierListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  outboundIdentifierListsItems={Array []}
  reasonListsFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
      Object {
        "filterOptions": Array [
          "enabled",
          "disabled",
        ],
        "label": "Status",
        "name": "active",
        "type": "select",
      },
    ]
  }
  reasonListsItems={Array []}
  removeListItem={[Function]}
  setSelectedSubEntityId={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
  userHasUpdatePermission={true}
  usersFields={
    Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
      Object {
        "filterOptions": Array [
          "accepted",
          "pending",
          "invited",
          "disabled",
        ],
        "label": "Tenant Status",
        "name": "status",
        "type": "select",
      },
      Object {
        "filterOptions": Array [
          "pending",
          "invited",
          "expired",
          "enabled",
          "disabled",
          "sso-only",
        ],
        "label": "Platform Status",
        "name": "invitationStatus",
        "type": "select",
      },
    ]
  }
  usersItems={Array []}
>
  Child
</GroupsDetailsPanel>
`;

exports[`Maps state to props only using selectors validates object created from mapStateToProps 1`] = `
Object {
  "defaultFilters": Object {
    "outboundIdentifierLists": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "reasonLists": Array [
      Object {
        "id": "active",
        "value": "enabled",
      },
    ],
    "users": Array [
      Object {
        "id": "status",
        "value": "accepted",
      },
      Object {
        "id": "invitationStatus",
        "value": "enabled",
      },
    ],
  },
  "inherited": false,
  "item": Object {
    "active": true,
    "description": "mockDescription",
    "id": "mockId",
    "name": "mockName",
    "users": Array [
      Object {
        "id": "mockSubEntityId",
      },
    ],
  },
  "outboundIdentifierListsFetching": undefined,
  "outboundIdentifierListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "outboundIdentifierListsItems": Array [],
  "reasonListsFetching": undefined,
  "reasonListsFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Description",
      "name": "description",
    },
    Object {
      "filterOptions": Array [
        "enabled",
        "disabled",
      ],
      "label": "Status",
      "name": "active",
      "type": "select",
    },
  ],
  "reasonListsItems": Array [],
  "userHasUpdatePermission": true,
  "usersFetching": undefined,
  "usersFields": Array [
    Object {
      "label": "Name",
      "name": "name",
    },
    Object {
      "label": "Email",
      "name": "email",
    },
    Object {
      "filterOptions": Array [
        "accepted",
        "pending",
        "invited",
        "disabled",
      ],
      "label": "Tenant Status",
      "name": "status",
      "type": "select",
    },
    Object {
      "filterOptions": Array [
        "pending",
        "invited",
        "expired",
        "enabled",
        "disabled",
        "sso-only",
      ],
      "label": "Platform Status",
      "name": "invitationStatus",
      "type": "select",
    },
  ],
  "usersItems": Array [],
}
`;
